--- a/styles/main.css
+++ b/styles/main.css
@@ -1,29 +1,158 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,400;1,900&family=Merriweather+Sans:wght@400;500;600;700&family=Merriweather:wght@300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap');
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
     box-sizing: border-box;
+}
+
+:root {
+    --mainGradient: linear-gradient(70deg, #F800DF 0%, #5B14F1 100%);
+}
+
+html {
+    font-size: 62.5%;
 }
 
 body {
     background-color: white;
-    font-family: 'Source Sans Pro', sans-serif;
-    line-height: 1.2;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.4rem;
+    line-height: 1;
+}
+
+h1 {
+    font-size: 3.6rem;
 }
 
 p {
     margin: .5rem 0;
 }
 
+h1,
+h2 {
+    font-family: 'Poppins', sans-serif;
+}
+
+
+
+/* Library section */
+#bookLibrary {
+    max-width: 1300px;
+    margin: 8rem auto;
+}
+
+#libraryHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 1.5rem 2.5rem;
+}
+
+#libraryContent {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 2.5rem;
+    gap: 2rem;
+}
+
+
+
+/* ----- Book Cards ----- */
+.card {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 350px;
+    align-items: center;
+    justify-content: center;
+    max-width: 350px;
+    min-height: 260px;
+    background-color: white;
+    border-radius: 1.2rem;
+    box-shadow:
+        0px 0.7px 1.8px rgba(0, 0, 0, 0.034),
+        0px 2.2px 7.6px rgba(0, 0, 0, 0.053),
+        0px 10px 45px rgba(0, 0, 0, 0.09);
+    box-shadow: 0px 5px 45px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+    box-shadow: 5px 9px 25px 0px #00000040;
+    text-align: center;
+    padding-top: 3rem;
+}
+
+.card-header,
+.card-body {
+    padding: 0 3rem;
+}
+
+.card-body {
+    flex-grow: 1;
+}
+
+.card h2,
+.book-author,
+.card p {
+    margin-bottom: 1.5rem;
+}
+
+.card h2 {
+    font-size: 2.6rem;
+}
+
+.card .book-author {
+    font-size: 1.2rem;
+    letter-spacing: .4rem;
+    text-shadow: 0 5px 5px hsla(280.3, 84%, 49%, 0.27);
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+.book-pages {
+    font-size: 2.4rem;
+    font-weight: 300;
+    line-height: 2.6rem;
+    margin-bottom: 2rem;
+}
+
+.pages-number {
+    font-weight: bold;
+}
+
+.desc-status {
+    font-weight: bold;
+    letter-spacing: 0.08rem;
+    margin: auto auto 1rem;
+    padding: .5rem;
+}
+
+.book-description {
+    font-size: 1.4rem;
+    line-height: 1.2;
+    text-align: left;
+    color: rgb(61, 71, 82);
+}
+
+.card footer {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 1.5rem;
+}
+
+
+
+/* ----- Modal and form ----- */
 .modal {
     position: fixed;
-    width: 600px;
+    width: 500px;
     max-width: 80%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
-    transition: .4s cubic-bezier(.23,1,.32,1);
+    transition: .3s cubic-bezier(.23,1,.32,1);
     background-color: white;
-    border-radius: .4rem;
+    border-radius: 1rem;
     z-index: 5;
     opacity: 0;
 }
@@ -34,28 +163,56 @@ p {
 }
 
 .modal-header {
+    background-color: #13141a;
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 1.5rem;
-    background-color: #151d1d;
     color: white;
-    padding: 1.5rem;
-    border-radius: .4rem .4rem 0 0;
-    border-bottom: 8px solid #e60000;
+    border-radius: 1rem 1rem 0 0;
+    font-size: 2rem;
+    font-weight: bold;
 }
 
-.modal-title {
-    font-weight: 700;
-    font-size: 1.6rem;
-}
-
+.modal-header, 
 .modal-body {
-    padding: 1.5rem;
+    padding: 2.4rem;
 }
 
 .modal-body p {
     margin: 0;
+}
+
+label {
+    display: inline-block;
+    font-weight: bold;
+    font-size: 1.6rem;
+    margin-bottom: 1rem;
+}
+
+input, textarea {
+    margin-bottom: 2rem;
+}
+
+input[type='checkbox'] {
+    width: 1.6rem;
+    height: 1.6rem;
+    margin-right: .5rem;
+}
+
+textarea {
+    display: block;
+    resize: none;
+}
+
+textarea,
+.modal-body input:not([type='checkbox']) {
+    width: 100%;
+    padding: 1rem;
+}
+
+.modal-body input:last-child {
+    margin-bottom: 0;
 }
 
 #close-button {
@@ -70,7 +227,7 @@ p {
 #darkOverlay {
     background: rgba(0,0,0,.5);
     position: fixed;
-    transition: .4s cubic-bezier(.23,1,.32,1);
+    transition: .3s cubic-bezier(.23,1,.32,1);
     top: 0;
     bottom: 0;
     left: 0;
@@ -82,4 +239,114 @@ p {
 #darkOverlay.active {
     opacity: 1;
     pointer-events: all;
+}
+
+
+/* Buttons */
+button, input[type='submit'] {
+    cursor: pointer;
+}
+
+.icon-btn,
+.desc-btn {
+    display: flex;
+    align-items: center;
+    background: transparent;
+    border: none;
+    font-weight: bold;
+    letter-spacing: .2rem;
+    padding: .5rem;
+    transition: all 1.2s;
+}
+
+.icon-btn:hover {
+    transform: scale(1.1);
+    background-color: black;
+}
+
+.read-btn i.material-icons {
+    margin-right: .5rem;
+}
+
+.desc-btn span.material-icons {
+    position: relative;
+    top: 0;
+    transition: transform .4s ease,
+                top .2s cubic-bezier(.23,1,.32,1),
+                bottom .2s cubic-bezier(.23,1,.32,1);
+}
+
+.desc-btn:hover span.material-icons {
+    top: 3px;
+}
+
+.desc-btn:hover .material-icons.hide-active {
+    top: -3px;
+}
+
+.material-icons.hide-active {
+    transform: rotate(180deg);
+}
+
+button > .material-icons {
+    pointer-events: none;
+}
+
+
+
+/* Card to add a new book */
+#addNew {
+    background-color: hsl(231, 16%, 9%);
+}
+
+#addNew.card,
+#addNew .material-icons {
+    position: relative;
+    cursor: pointer;
+    padding: 0;
+    color: white;
+    font-size: 12rem;
+    transition: all .3s ease;
+}
+
+#addNew .material-icons {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#addNew:hover .material-icons {
+    top: 40%;
+    transform: translate(-50%, -50%) rotate(270deg) scale(1.2);
+}
+
+#addNew::after {
+    content: 'Add new book';
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 1rem;
+    transition: all .2s ease-in-out;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+}
+
+#addNew:hover::after {
+    opacity: 1;
+    top: 65%;
+}
+
+
+
+/* Gradients */
+.card .book-author,
+.read-btn,
+.delete-btn {
+    background-image: var(--mainGradient);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
 }
