--- a/styles/main.css
+++ b/styles/main.css
@@ -6,19 +6,38 @@
     box-sizing: border-box;
 }
 
-:root {
-    --mainGradient: linear-gradient(70deg, #F800DF 0%, #5B14F1 100%);
-}
-
 html {
     font-size: 62.5%;
 }
 
 body {
-    background-color: white;
+    --mainBackgroundColor: white;
+    --mainGradient: linear-gradient(70deg, #F800DF 0%, #5B14F1 100%);
+    --mainTextColor: black;
+    --secondaryTextColor: hsl(0, 0%, 20%);
+    --contrastTextColor: white;
+    --cardBackgroundColor: white;
+    --cardShadow: 0 4px 24px 0 rgba(143, 103, 255, 0.1), 0 12px 64px 0 rgba(186, 103, 255, 0.1);
+    --modalHeaderColor: #13141a;
+    --modalBodyColor: hsl(257, 18%, 17%);
+    
+    background-color: var(--mainBackgroundColor);
+    color: var(--mainTextColor);
     font-family: 'Roboto', sans-serif;
     font-size: 1.4rem;
     line-height: 1;
+    transition: .5s ease;
+}
+
+body.dark {
+    --mainGradient: linear-gradient(120deg, hsl(34, 100%, 69%) 0%, hsl(288, 100%, 64%) 100%);
+    --mainTextColor: white;
+    --secondaryTextColor: hsl(0, 0%, 90%);
+    --contrastTextColor: white;
+    --cardBackgroundColor: hsl(0, 0%, 13%);
+    --mainBackgroundColor: hsl(180, 0%, 8%);
+    /* --modalHeaderColor: #353535; */
+    --cardShadow: 0px 5px 45px rgb(0 0 0 / 12%);
 }
 
 h1 {
@@ -39,14 +58,32 @@ h2 {
 /* Library section */
 #bookLibrary {
     max-width: 1300px;
-    margin: 8rem auto;
+    margin: 6rem auto;
 }
 
 #libraryHeader {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 1.5rem 2.5rem;
+    gap: 1rem;
+    margin: 1.2rem 2.5rem;
+}
+
+#libraryHeader p {
+    color: var(--secondaryTextColor);
+}
+
+#dark-mode {
+    border: none;
+    background: transparent;
+    padding: .5rem;
+    margin-right: auto;
+    color: var(--mainTextColor);
+    transition: transform .25s cubic-bezier(.18,.89,.32,1.28);
+}
+
+#dark-mode:hover {
+    transform: rotate(-15deg) scale(1.25);
 }
 
 #libraryContent {
@@ -68,15 +105,9 @@ h2 {
     justify-content: center;
     max-width: 350px;
     min-height: 260px;
-    background-color: white;
+    background-color: var(--cardBackgroundColor);
     border-radius: 1.2rem;
-    box-shadow:
-        0px 0.7px 1.8px rgba(0, 0, 0, 0.034),
-        0px 2.2px 7.6px rgba(0, 0, 0, 0.053),
-        0px 10px 45px rgba(0, 0, 0, 0.09);
-    box-shadow: 0px 5px 45px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
-    box-shadow: 5px 9px 25px 0px #00000040;
+    box-shadow: var(--cardShadow);
     text-align: center;
     padding-top: 3rem;
 }
@@ -129,8 +160,7 @@ h2 {
 .book-description {
     font-size: 1.4rem;
     line-height: 1.2;
-    text-align: left;
-    color: rgb(61, 71, 82);
+    color: var(--secondaryTextColor);
 }
 
 .card footer {
@@ -151,7 +181,7 @@ h2 {
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
     transition: .3s cubic-bezier(.23,1,.32,1);
-    background-color: white;
+    background-color: var(--modalBodyColor);
     border-radius: 1rem;
     z-index: 5;
     opacity: 0;
@@ -159,13 +189,14 @@ h2 {
 
 .modal.active {
     transform: translate(-50%, -50%) scale(1);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 20px 5px;
     opacity: 1;
 }
 
 .modal-header {
-    background-color: #13141a;
+    background-color: var(--modalHeaderColor);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 1.5rem;
     color: white;
@@ -177,10 +208,15 @@ h2 {
 .modal-header, 
 .modal-body {
     padding: 2.4rem;
+    color: var(--contrastTextColor);
 }
 
 .modal-body p {
     margin: 0;
+}
+
+form {
+    accent-color: hsl(284, 100%, 45%);
 }
 
 label {
@@ -247,6 +283,23 @@ button, input[type='submit'] {
     cursor: pointer;
 }
 
+.modal-body input[type='submit'] {
+    color: white;
+    font-weight: 800;
+    font-size: 1.8rem;
+    letter-spacing: .1rem;
+    padding: 1.7rem;
+    border: none;
+    border-radius: 0.5rem;
+    background-color: hsl(284, 100%, 45%);
+    box-shadow: 0 2px 10px rgba(189, 0, 255, 0.15), 0 3px 6px rgba(189, 0, 255, 0.2);
+    transition: background-color .3s ease;
+}
+
+.modal-body input[type='submit']:hover {
+    background-color: hsl(284, 100%, 30%);
+}
+
 .icon-btn,
 .desc-btn {
     display: flex;
@@ -255,13 +308,20 @@ button, input[type='submit'] {
     border: none;
     font-weight: bold;
     letter-spacing: .2rem;
-    padding: .5rem;
-    transition: all 1.2s;
+    padding: .7rem;
+    color: var(--mainTextColor);
+}
+
+.icon-btn {
+    transition: all .2s ease;
 }
 
 .icon-btn:hover {
-    transform: scale(1.1);
-    background-color: black;
+    transform: scale(1.08);
+    background: #13141b;
+    color: white;
+    -webkit-text-fill-color: white;
+    border-radius: .5rem;
 }
 
 .read-btn i.material-icons {
@@ -296,7 +356,7 @@ button > .material-icons {
 
 /* Card to add a new book */
 #addNew {
-    background-color: hsl(231, 16%, 9%);
+    background-color: hsl(0, 0%, 13%);
 }
 
 #addNew.card,
@@ -338,7 +398,6 @@ button > .material-icons {
 }
 
 
-
 /* Gradients */
 .card .book-author,
 .read-btn,
@@ -349,4 +408,38 @@ button > .material-icons {
     background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
+}
+
+
+/* Selection */
+::selection {
+    background-color: hsl(284, 100%, 45%);
+    color: var(--contrastTextColor);
+}
+
+
+/* Media queries */
+@media screen and (max-width: 1024px) {
+    #bookLibrary {
+        margin: 1rem auto;
+    }
+
+    .card-header,
+    .card-body {
+        padding: 0 2rem;
+    }
+
+    .modal {
+        max-width: 90%;
+    }
+
+    modal-header, .modal-body {
+        padding: 2rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    html {
+        font-size: 57.5%;
+    }
 }
