--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,400;1,900&family=Merriweather+Sans:wght@400;500;600;700&family=Merriweather:wght@300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 *,
 *::after,
@@ -8,36 +8,43 @@
 
 html {
     font-size: 62.5%;
+    height: 100%
 }
 
 body {
-    --mainBackgroundColor: white;
+    --mainBackgroundColor: hsl(0, 0%, 98%);
     --mainGradient: linear-gradient(70deg, #F800DF 0%, #5B14F1 100%);
     --mainTextColor: black;
     --secondaryTextColor: hsl(0, 0%, 20%);
     --contrastTextColor: white;
     --cardBackgroundColor: white;
-    --cardShadow: 0 4px 24px 0 rgba(143, 103, 255, 0.1), 0 12px 64px 0 rgba(186, 103, 255, 0.1);
+    --cardShadow: 0 4px 24px 0 rgba(143, 103, 255, 0.05), 0 12px 64px 0 rgba(186, 103, 255, 0.1);
     --modalHeaderColor: #13141a;
-    --modalBodyColor: hsl(257, 18%, 17%);
+    --modalBodyColor: hsl(257, 15%, 17%);
     
     background-color: var(--mainBackgroundColor);
     color: var(--mainTextColor);
     font-family: 'Roboto', sans-serif;
     font-size: 1.4rem;
     line-height: 1;
-    transition: .5s ease;
+    transition: background .4s ease;
+    height: 100%;
 }
 
 body.dark {
-    --mainGradient: linear-gradient(120deg, hsl(34, 100%, 69%) 0%, hsl(288, 100%, 64%) 100%);
+    --mainBackgroundColor: hsl(180, 0%, 8%);
+    --mainGradient: linear-gradient(120deg, hsl(5, 100%, 63%) 0%, hsl(288, 100%, 64%) 100%);
     --mainTextColor: white;
     --secondaryTextColor: hsl(0, 0%, 90%);
     --contrastTextColor: white;
-    --cardBackgroundColor: hsl(0, 0%, 13%);
-    --mainBackgroundColor: hsl(180, 0%, 8%);
-    /* --modalHeaderColor: #353535; */
+    --cardBackgroundColor: hsl(0, 0%, 12%);
     --cardShadow: 0px 5px 45px rgb(0 0 0 / 12%);
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 h1 {
@@ -53,12 +60,19 @@ h2 {
     font-family: 'Poppins', sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: var(--mainTextColor);
+    font-weight: bold;
+}
 
 
 /* Library section */
 #bookLibrary {
+    width: 100%;
     max-width: 1300px;
     margin: 6rem auto;
+    flex-grow: 1;
 }
 
 #libraryHeader {
@@ -71,6 +85,7 @@ h2 {
 
 #libraryHeader p {
     color: var(--secondaryTextColor);
+    line-height: 1.2;
 }
 
 #dark-mode {
@@ -82,8 +97,44 @@ h2 {
     transition: transform .25s cubic-bezier(.18,.89,.32,1.28);
 }
 
-#dark-mode:hover {
-    transform: rotate(-15deg) scale(1.25);
+#read-progress {
+    width: 100%;
+    max-width: 150px;
+    text-align: center;
+}
+
+#read-progress label {
+    margin-bottom: .5rem;
+}
+
+progress {
+    background-color: hsl(0, 0%, 85%);
+    border: none;
+    border-radius: 1rem;
+    height: 12px;
+    width: 100%;
+    max-width: 150px;
+    overflow: hidden;
+}
+
+progress::-moz-progress-bar {
+    border: none;
+    border-radius: 1rem 0 0 1rem;
+    background-color: hsl(284, 100%, 45%); /* Fallback */
+    background-image: var(--mainGradient);
+}
+
+progress::-webkit-progress-bar {
+    border: none;
+    border-radius: 1rem 0 0 1rem;
+    background-color: hsl(0, 0%, 85%);
+}
+
+progress::-webkit-progress-value {
+    border: none;
+    border-radius: 1rem 0 0 1rem;
+    background-color: hsl(284, 100%, 45%); /* Fallback */
+    background-image: var(--mainGradient);
 }
 
 #libraryContent {
@@ -93,7 +144,6 @@ h2 {
     margin: 0 2.5rem;
     gap: 2rem;
 }
-
 
 
 /* ----- Book Cards ----- */
@@ -110,6 +160,7 @@ h2 {
     box-shadow: var(--cardShadow);
     text-align: center;
     padding-top: 3rem;
+    transition: background .4s ease;
 }
 
 .card-header,
@@ -170,6 +221,17 @@ h2 {
     padding: 1.5rem;
 }
 
+
+/* Footer */
+footer {
+    padding: 2rem;
+}
+
+footer p {
+    color: var(--mainTextColor);
+    text-align: center;
+    line-height: 1.2;
+}
 
 
 /* ----- Modal and form ----- */
@@ -256,10 +318,6 @@ textarea,
     transition: .2s ease-in-out;
 }
 
-#close-button:hover {
-    color: #e60000;
-}
-
 #darkOverlay {
     background: rgba(0,0,0,.5);
     position: fixed;
@@ -296,10 +354,6 @@ button, input[type='submit'] {
     transition: background-color .3s ease;
 }
 
-.modal-body input[type='submit']:hover {
-    background-color: hsl(284, 100%, 30%);
-}
-
 .icon-btn,
 .desc-btn {
     display: flex;
@@ -316,14 +370,6 @@ button, input[type='submit'] {
     transition: all .2s ease;
 }
 
-.icon-btn:hover {
-    transform: scale(1.08);
-    background: #13141b;
-    color: white;
-    -webkit-text-fill-color: white;
-    border-radius: .5rem;
-}
-
 .read-btn i.material-icons {
     margin-right: .5rem;
 }
@@ -336,14 +382,6 @@ button, input[type='submit'] {
                 bottom .2s cubic-bezier(.23,1,.32,1);
 }
 
-.desc-btn:hover span.material-icons {
-    top: 3px;
-}
-
-.desc-btn:hover .material-icons.hide-active {
-    top: -3px;
-}
-
 .material-icons.hide-active {
     transform: rotate(180deg);
 }
@@ -353,10 +391,9 @@ button > .material-icons {
 }
 
 
-
 /* Card to add a new book */
 #addNew {
-    background-color: hsl(0, 0%, 13%);
+    background-color: hsl(0, 0%, 12%);
 }
 
 #addNew.card,
@@ -421,7 +458,7 @@ button > .material-icons {
 /* Media queries */
 @media screen and (max-width: 1024px) {
     #bookLibrary {
-        margin: 1rem auto;
+        margin: 0 auto;
     }
 
     .card-header,
@@ -429,11 +466,15 @@ button > .material-icons {
         padding: 0 2rem;
     }
 
+    .card-body p {
+        line-height: 1.2;
+    }
+
     .modal {
         max-width: 90%;
     }
 
-    modal-header, .modal-body {
+    .modal-header, .modal-body {
         padding: 2rem;
     }
 }
@@ -441,5 +482,35 @@ button > .material-icons {
 @media screen and (max-width: 768px) {
     html {
         font-size: 57.5%;
+    }
+}
+
+@media (hover: hover) {
+    #dark-mode:hover {
+        transform: rotate(-15deg) scale(1.25);
+    }
+
+    #close-button:hover {
+        color: #e60000;
+    }
+
+    .modal-body input[type='submit']:hover {
+        background-color: hsl(284, 100%, 30%);
+    }
+
+    .icon-btn:hover {
+        transform: scale(1.08);
+        background: #13141b;
+        color: white;
+        -webkit-text-fill-color: white;
+        border-radius: .5rem;
+    }
+
+    .desc-btn:hover span.material-icons {
+        top: 3px;
+    }
+    
+    .desc-btn:hover .material-icons.hide-active {
+        top: -3px;
     }
 }
